tests/basic/check/if/090.pan.out
tests/basic/check/if/090.pan:3:1-4: error: cannot solve constraints of f90
tests/basic/check/if/090.pan:6:1-4: error: cannot solve constraints of f91