tests/basic/check/if/090.pan

f90 : {b:bool|b=true} -> {v:int|v=2}
f90 = \b:bool. if b then 1 else 2

f91 : {b:bool|b=false} -> {v:int|v=1}
f91 = \b:bool. if b then 1 else 2
